--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="img-box">
+    <!-- start of img and search bar -->
+    <div class="content" id="main">
       <img src="./img/logo.png" alt="Google Logo" id="logo" />
     </div>
     <div id="search">
       <form action="" class="search">
         <input type="text" name="" id="" />
       </form>
+      <!-- end of img and search bar -->
     </div>
   </body>
 </html>
