Finally some progress in search bar and the buttons

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
       <img src="./img/logo.png" alt="Google Logo" id="logo" />
     </div>
     <div id="search">
-      <form action="" class="search">
-        <input type="text" name="" id="" />
+      <form action="" id="search-form">
+        <input type="text" name="search-bar" id="bar" />
       </form>
       <!-- end of img and search bar -->
+      <!-- submit buttons div -->
+      <div class="button">
+        <input type="submit" value="Google Search" id="gs" />
+        <input type="submit" value="I'm Feeling Lucky" id="ifl" />
+      </div>
     </div>
   </body>
 </html>
