--- a/index.html
+++ b/index.html
@@ -8,19 +8,36 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- start of img and search bar -->
-    <div class="content" id="main">
-      <img src="./img/logo.png" alt="Google Logo" id="logo" />
-    </div>
-    <div id="search">
-      <form action="" id="search-form">
-        <input type="text" name="search-bar" id="bar" />
-      </form>
-      <!-- end of img and search bar -->
-      <!-- submit buttons div -->
-      <div class="button">
-        <input type="submit" value="Google Search" id="gs" />
-        <input type="submit" value="I'm Feeling Lucky" id="ifl" />
+    <nav>
+      <div class="nav" id="l-nav">
+        <ul>
+          <li><a href="About">About</a></li>
+          <li><a href="Store">Store</a></li>
+        </ul>
+      </div>
+      <div class="nav" id="r-nav"></div>
+    </nav>
+    <div id="viewport">
+      <!-- start of img and search bar -->
+      <div class="content" id="main">
+        <img src="./img/logo.png" alt="Google Logo" id="logo" />
+      </div>
+      <!-- search form -->
+      <div id="s-form">
+        <form action="" id="search-form">
+          <input type="search" name="search-bar" id="bar" />
+        </form>
+        <!-- end of img and search bar -->
+        <!-- submit buttons div -->
+        <div id="search">
+          <input type="submit" value="Google Search" id="gs" class="button" />
+          <input
+            type="submit"
+            value="I'm Feeling Lucky"
+            id="ifl"
+            class="button"
+          />
+        </div>
       </div>
     </div>
   </body>
