wanna delete and change all the navbar staff and build from beginning!

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
       <div class="nav" id="l-nav">
         <ul>
-          <li><a href="About">About</a></li>
-          <li><a href="Store">Store</a></li>
+          <li><a href="About" class="l-nav">About</a></li>
+          <li><a href="Store" class="l-nav">Store</a></li>
         </ul>
       </div>
       <div class="nav" id="r-nav"></div>
