fixed the nav bar issue and moved it into viewport div, and added left navbar

--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav>
-      <div class="nav" id="l-nav">
-        <ul>
-          <li><a href="About" class="l-nav">About</a></li>
-          <li><a href="Store" class="l-nav">Store</a></li>
-        </ul>
-      </div>
-      <div class="nav" id="r-nav"></div>
-    </nav>
     <div id="viewport">
+      <!-- navbar setup -->
+      <nav>
+        <div class="nav" id="l-nav">
+          <ul>
+            <li class="l-li">
+              <a
+                href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header"
+                class="l-nav"
+                >About</a
+              >
+            </li>
+            <li class="l-li">
+              <a
+                href="https://store.google.com/GB?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB"
+                class="l-nav"
+                >Store</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="nav" id="r-nav"></div>
+      </nav>
       <!-- start of img and search bar -->
       <div class="content" id="main">
         <img src="./img/logo.png" alt="Google Logo" id="logo" />
