--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
             </li>
           </ul>
         </div>
-        <div class="nav" id="r-nav"></div>
+        <div id="r-nav">
+          <ul>
+            <li class="r-li r-nav">
+              <input id="sign" type="button" value="Sing in" /><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"></a>
+                <li class="r-li r-nav" id="icon">
+                  <a href="https://www.google.co.uk/intl/en/about/products?tab=wh"></a><img src="./img/icon.png" alt="icon" />
+                </li>
+              <li class="r-li r-nav text"  ><a href="https://www.google.co.uk/imghp?hl=en&tab=wi&authuser=0&ogbl">Images</a></li>
+              <li class="r-li r-nav text"><a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl">Gmail</a></li>
+            </li>
+          </ul>
+        </div>
       </nav>
       <!-- start of img and search bar -->
       <div class="content" id="main">
