Footer Structure complete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="viewport">
       <!-- navbar setup -->
       <nav>
+        <!-- left navbar -->
         <div class="nav" id="l-nav">
           <ul>
             <li class="l-li">
@@ -29,10 +30,11 @@
             </li>
           </ul>
         </div>
+        <!-- right navbar -->
         <div id="r-nav">
           <ul>
             <li class="r-li r-nav">
-              <input id="sign" type="button" value="Sing in" /><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"></a>
+              <input id="sign" type="button" value="Sign in" /><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"></a>
                 <li class="r-li r-nav" id="icon">
                   <a href="https://www.google.co.uk/intl/en/about/products?tab=wh"></a><img src="./img/icon.png" alt="icon" />
                 </li>
@@ -42,6 +44,7 @@
           </ul>
         </div>
       </nav>
+      <!--  -->
       <!-- start of img and search bar -->
       <div class="content" id="main">
         <img src="./img/logo.png" alt="Google Logo" id="logo" />
@@ -63,6 +66,24 @@
           />
         </div>
       </div>
+      <!-- footer -->
+      <footer>
+        <div class="footer">
+          <div id="location">
+          <span id="loc">Iran</span>
+          </div>
+          <span id="right-s" class="right-s">
+            <a href="https://policies.google.com/privacy?fg=1">privacy</a>
+            <a href="https://policies.google.com/terms?fg=1">terms</a>
+            <a href="https://www.google.com/preferences?hl=en">Settings</a>
+          </span>
+          <span id="left-s" class="left-s">
+            <a href="https://www.google.com/intl/en_uk/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+            <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a>
+            <a href="https://google.com/search/howsearchworks/?fg=1">how search works</a>
+          </span>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
